# AIMO

./: .gitignore  README.md  setup.cfg
2022/PS 0/: README.md
2022/PS 1/: README.md
2022/PS 2/: README.md
2022/PS 3/: PS 3 > Problem 2.py  PS 3 > Problem 5.py  README.md
2022/PS 3/misc/: def is_abundant(n):.py
AIMOAnswers.egg-info/: PKG-INFO  SOURCES.txt
aimo/: __init__.py  aimo.py
aimo/2022/: README.md
aimo/2022/PS 4/: README.md
aimo/2022/PS3/: Problem1.py  Problem4.py
aimo/Year2022/PS3/: Problem3.py  Problem4.py
