[metadata]
name = Smg88
description = Contains a python package with some useful functions and classes to use across projects
author = Smartguy88
author_email = verysmartguy88@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Smartestguy88/Smg88
platforms = unix, linux, osx, cygwin, win32
version = 0.3.14

classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.9

[options]
package_dir =
    = py_packages
packages = aimo
python_requires = >=3.9
#install_requires = 

[options.packages.find]
where = py_packages
